--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tinder for devs",
   "main": "index.js",
   "scripts": {
-    "start" : "node scr/app.js",
+    "start": "node scr/app.js",
     "dev": "nodemon src/app.js"
   },
   "keywords": [
@@ -14,6 +14,7 @@
   "author": "Aditya Singh",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.3"
   }
 }
