--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Aditya Singh",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.18.3"
   }
